# component-contribution

./: .editorconfig  .gitattributes  .gitignore  .project  .travis.yml  CONTRIBUTING.rst  COPYRIGHT  MANIFEST.in  README.md  add_compound.ipynb  index.html  params.json  requirements.txt  setup.cfg  setup.py  tox.ini
cache/: compounds.csv  compounds.json  compounds.mat  training_data_matlab.mat
component_contribution/: __init__.py  _version.py  cache_chebi.py  chemaxon.py  component_contribution.py  component_contribution_trainer.py  compound.py  compound_cache.py  compound_cacher.py  databases.py  exceptions.py  export_to_csv.py  export_to_equilibrator.py  inchi2gv.py  kegg_database.py  kegg_model.py  kegg_reaction.py  linalg.py  mol_utils.py  molecule.py  reaction.py  recache_compound.py  redox.py  report_group_info.py  singleton.py  thermodynamic_constants.py  training_data.py  transform_energies.py
component_contribution/cache/: __init__.py  component_contribution.npz  compounds.csv  compounds.sqlite
component_contribution/data/: TECRDB.csv  TECRDB.tsv  __init__.py  compounds.csv  formation_energies_transformed.csv  redox.csv  redox.tsv  toy_training_data.csv
data/: abundance_bennett.tsv  abundance_sauer.csv  compounds.tsv  formation_energies_transformed.tsv  kegg_additions.tsv
doc/: equilibrator.tex  lp_with_thermo.tex
examples/: __init__.py  analyse_atp_hydrolysis.py  bastian_main.m  bastian_reactions.txt  calc_E.py  glycolysis.txt  mdf.py  mishary.py  mishary_reactions.txt  rienk_main.m  rienk_reactions.txt  simeon.py  simeon_reactions.txt  stefano.py  wolf.py  wolf_main.m  wolf_reactions.txt
examples/vz/: ReactionOverview.tsv  StoiMat.tsv  vz_cc_run.py  vz_main.m
examples/vz/output/: cc_dG.tsv  cc_dG_matlab.tsv  cc_dG_matlab_b.tsv
matlab/: .gitignore  Contents.m  Transform.m  addBiochemicalEnergies.m  addHydrogensAndCharge.m  addThermoToModel.m  balanceReactionsInTrainingData.m  balanceReactionsS.m  cdfplot.m  componentContribution.m  createGroupIncidenceMatrix.m  createKeggGroupIncidenceMatrix.m  createKeggModelFromS.m  createModelFromS.m  getBinaryPath.m  getFormulaAndChargeFromInChI.m  getGibbsForKeggModel.m  getGroupVectorFromInchi.m  getInchi.m  getInchies.m  getKeggpKas.m  getMappingScores.m  getMolecularWeight.m  getNumAtomsOfElementInFormula.m  getTrainingDatapKas.m  invertProjection.m  loadKeggModel.m  loadTrainingData.m  parseKeggModel.m  reaction2sparse.m  reverseTransformTrainingData.m  subset_index.m  testReverseTransform.m
matlab_v2/: componentContribution.m  getBasePath.m  getStandardGibbsEnergyUsingCC.m  initComponentContribution.m  main.m  prepare_model.py  prepare_training_data.py  test.asv  test.m  training_data.py
python/: __init__.py  chemaxon.py  component_contribution.py  compound.py  compound_cacher.py  elements.py  export_to_csv.py  export_to_equilibrator.py  inchi2gv.py  kegg_compound.py  kegg_errors.py  kegg_model.py  kegg_reaction.py  molecule.py  recache_compound.py  singletonmixin.py  thermodynamic_constants.py  training_data.py  transform_energies.py
scripts/: calc_E.py  compound_abundance.py  dgr_vs_ph.py  example.py  export_group_vectors.py  export_to_equilibrator.py  html_writer.py  kegg_parser.py  max_min_driving_force.py  mdf_dual.py  mdf_pathways.txt  pathway_modeling.py
src/component_contribution/: inchi2gv.py  molecule.py  training_data.py
src/component_contribution/data/: __init__.py  (+2 more)
standalone/: calc_dGr0.py  preprocessing.py
tests/: __init__.py  report_gc.m  report_gc.mat  report_gc.py  test.m  test.py  test_alberty.py  test_chemaxon.py  test_databases.py  test_import.py  test_inchi2gv.py  test_obabel.py  test_rt.py  test_singleton.py  test_train.py  test_training_data.py
tests/old/: __init__.py  report_gc.py  report_gc_reactions.txt  test.py  test_inchi2gv.py  test_rt.m
tests/test_unit/: test_alberty.py  test_chemaxon.py  test_databases.py  test_inchi2gv.py  test_reaction.py  test_train.py  test_training_data.py
(+1 files in other folders)
