[metadata]
name = component-contribution
url = https://github.com/eladnoor/component-contribution
download_url = https://eladnoor.github.io/component-contribution/
author = Elad Noor
author_email = noor@imsb.biol.ethz.ch
maintainer = Joao Cardoso
maintainer_email = joaca@biosustain.dtu.dk
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = MIT License
description = Standard reaction Gibbs energy estimation for biochemical reactions.
long_description = file: README.rst
keywords =
    component contribution
    Gibbs energy
    biochemical reaction

[options]
zip_safe = True
install_requires =
    importlib-resources
    numpy>=1.14.0
    scipy>=1.0.0
    pandas>=0.23
    bioservices>=1.5
    openbabel>=2.4.1
    requests
python_requires = >=3.5
tests_require =
    tox
packages = find:

[options.package_data]
component_contribution.data =
    *.csv
    *.csv.gz
    *.tsv
    *.tsv.gz
    *.json.gz

component_contribution.cache =
    *.csv

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
exclude =
    __init__.py
    docs

[pydocstyle]
match_dir = component_contribution

[tool:pytest]
testpaths = tests

[isort]
line_length = 80
indent = 4
multi_line_output = 4
lines_after_imports = 2
known_first_party = component_contribution
known_third_party =
    importlib_resources
    numpy
    scipy
    pandas
    pybel
    pytest
    openbabel
    requests

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = component_contribution/_version.py
versionfile_build = component_contribution/_version.py
tag_prefix =
parentdir_prefix = component_contribution-

